<resources>
    <string name="app_name">NameQuizApp</string>
    <string name="app_title">The Name Quiz</string>
    <string name="button_quiz">Quiz</string>
    <string name="button_picture">Upload a picture</string>
    <string name="show_all_button">Database</string>
    <string name="show_textView">Database</string>
    <string name="addImageText">Add a new entry</string>
    <string name="addPerson_Button">Add Person</string>
    <string name="upload_person_desc">Upload yourself</string>
    <string name="hint">Name Nicknameson</string>
    <string name="addImage">Add an image!</string>
    <string name="error_message"></string>
    <string name="quiz_button">Submit</string>
    <string name="quiz_score">Score:</string>
    <string name="quiz_content">Quiz image</string>
    <string name="feedBack"></string>
    <string name="delete_button">Delete</string>
    <string name="upload_content">Upload from gallery</string>
    <string name="camera_content">Take a picture from camera</string>
    <string name="addUsernameText">Update your username below</string>
    <string name="username_hint">Username</string>
    <string name="update_username_btn">Update username</string>
    <string name="edittext">com.example.namequizapp.edittext</string>
    <string name="settingsText">Change username:</string>
    <string name="backBtnDesc">Back from fragment</string>
    <string name="updateUsernameBtn">Update name</string>
    <string name="settingsTextView">Settings</string>
</resources>
