<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addImageName"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".AddImageActivity">

    <ImageView
        android:id="@+id/imageView_add"
        android:layout_width="176dp"
        android:layout_height="160dp"
        android:autofillHints="@string/addImage"
        android:contentDescription="@string/upload_person_desc"
        app:layout_constraintBottom_toTopOf="@+id/name_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_image_tvw"
        app:layout_constraintVertical_bias="0.47"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/add_image_tvw"
        android:layout_width="400dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/addImageText"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_PersonName"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/custom_button"
        android:text="@string/addPerson_Button"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edit" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_image_tvw"
        app:layout_constraintVertical_bias="0.64" />

    <TextView
        android:id="@+id/error_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_message"
        android:textAlignment="center"
        android:textColor="#cc0000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/add_PersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edit" />

    <ImageButton
        android:id="@+id/camera_button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/custom_button"
        android:contentDescription="@string/camera_content"
        android:onClick="dispatchTakePictureIntent"
        app:layout_constraintEnd_toStartOf="@+id/imageView_add"
        app:layout_constraintHorizontal_bias="0.283"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_image_tvw"
        app:srcCompat="@drawable/baseline_camera_alt_white_18dp" />

    <ImageButton
        android:id="@+id/upload_button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginBottom="124dp"
        android:background="@drawable/custom_button"
        android:contentDescription="@string/upload_content"
        android:onClick="uploadImage"
        app:layout_constraintBottom_toTopOf="@+id/name_edit"
        app:layout_constraintEnd_toStartOf="@+id/imageView_add"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_photo_library_white_18dp" />


</androidx.constraintlayout.widget.ConstraintLayout>